--- a/hw.css
+++ b/hw.css
@@ -1,4 +1,13 @@
-/*Assignment 2: Advanced selectors. This code is specially written for desktop screens.*/
+/* This work is a response to exercises given by Colleen Van Lent in the Coursera class: Introduction to CSS3.
+
+The code can be used to style the following HTML pages.
+
+http://codepen.io/ColleenEMc/pen/WQXdeQ (index.html)
+
+http://codepen.io/ColleenEMc/pen/NGwXWG (history.html)
+
+http://codepen.io/ColleenEMc/pen/ZbavEK (teams.html)
+*/
 
 
 body {
