--- a/hw.css
+++ b/hw.css
@@ -1,6 +1,6 @@
 /* This work is a response to exercises given by Colleen Van Lent in the Coursera class: Introduction to CSS3.
 
-The code can be used to style the following HTML pages.
+The code can be used to style the following HTML pages:
 
 http://codepen.io/ColleenEMc/pen/WQXdeQ (index.html)
 
